@@ -6,7 +6,9 @@
 	  device/lib/z80/memcpy.s,
 	  device/lib/z80/memmove.s,
 	  device/lib/z80n/memcpy.s,
-	  device/lib/z80n/memmove.s:
+	  device/lib/z80n/memmove.s,
+	  device/lib/r3ka/memcpy.s,
+	  device/lib/r3ka/memmove.s:
 	  Fix library functions for new calling convention.
 
 2021-08-20 Philipp Klaus Krause <pkk AT spth.de>
